--- a/less/iconFont.less
+++ b/less/iconFont.less
@@ -21,6 +21,11 @@
 .playBox-icon:hover{
  color: lighten(#2b2b2b,30%);
 }
+.font-love-icon{
+  .icon;
+  color: #fe0002;
+  font-size: 7.5em;
+}
 
 
 //针对较大的icon调整尺寸
@@ -31,7 +36,6 @@
   display: none;
   .playBox-iconBig;
 }
-
 #playBox-play{
   display: inline;
   .playBox-iconBig;
