--- a/less/iconFont.less
+++ b/less/iconFont.less
@@ -21,10 +21,16 @@
 .playBox-icon:hover{
  color: lighten(#2b2b2b,30%);
 }
+//爱心的icon
 .font-love-icon{
   .icon;
   color: #fe0002;
   font-size: 7.5em;
+}
+//52面的music icon
+.font-music-icon{
+  .icon;
+  color: #2b2b2b;
 }
 
 
