--- a/css/iconFont.css
+++ b/css/iconFont.css
@@ -34,6 +34,14 @@
   color: #fe0002;
   font-size: 7.5em;
 }
+.font-music-icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+  color: #2b2b2b;
+}
 .playBox-iconBig {
   font-size: 3.5em;
 }
